--- a/MidGuard/product.html
+++ b/MidGuard/product.html
@@ -114,7 +114,7 @@
                     </div>
                     <div class="pincode-checker">
                         <i class='bx bxs-map-pin'></i>
-                        <input type="text" placeholder="Enter Pincode" maxlength="6">
+                        <input type="number" placeholder="Enter Pincode" maxlength="6">
                         <button class="check-btn">Check</button>
                     </div>
                     <div class="product-specs">
@@ -275,3 +275,4 @@
 </body>
 
 </html>
+
