--- a/MidGuard/product.html
+++ b/MidGuard/product.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="info-container glass-card">
-                    <h1>Room 1</h1>
+                    <h1>Product 1</h1>
                     <div class="rating-placeholder">★★★★☆ 4.5 | 1,234 Ratings</div>
                     <div class="price-container">
                         <span class="current-price">₹xx,999</span>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="description-content scrollable">
                     <h4>Welcome to our Room.</h4>
-                    <p>This is where the detailed description of the product or room will go.</p>
+                    <p>This is where the detailed description of the product will go.</p>
                 </div>
             </div>
         <section class="reviews-section">
@@ -254,15 +254,15 @@
             <section class="product-suggestions">
                 <h2>You might also like</h2>
                 <div class="suggestions-scroll-container">
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 458219</div><div class="text-content"><h4>Room 2</h4><p>₹15,999</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 987345</div><div class="text-content"><h4>Room 3</h4><p>₹14,599</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 4</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 5</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 6</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 7</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 8</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 9</h4><p>₹10,499</p></div></div>
-                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Room 10</h4><p>₹10,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 458219</div><div class="text-content"><h4>Product 2</h4><p>₹15,999</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 987345</div><div class="text-content"><h4>Product 3</h4><p>₹14,599</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 321654</div><div class="text-content"><h4>Product 4</h4><p>₹10,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 451654</div><div class="text-content"><h4>Product 5</h4><p>₹5,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 397854</div><div class="text-content"><h4>Product 6</h4><p>₹3,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 764654</div><div class="text-content"><h4>Product 7</h4><p>₹20,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 378673</div><div class="text-content"><h4>Product 8</h4><p>₹1,499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 987852</div><div class="text-content"><h4>Product 9</h4><p>₹499</p></div></div>
+                    <div class="suggestion-card"><div class="image-placeholder"></div><div class="room-id-badge small">ID: 876721</div><div class="text-content"><h4>Product 10</h4><p>₹999</p></div></div>
                 </div>
             </section>
         </main>
@@ -275,4 +275,5 @@
 </body>
 
 </html>
+
 
